# smol

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
benches/: benchmark.rs  metrics.rs  tokenize.rs
src/: error.rs  lib.rs  pos.rs
src/metrics/: distance.rs  mod.rs
src/tag/: corpus.rs  mod.rs  perceptron.rs
src/tokenize/: chr.rs  mod.rs  regex.rs  sentence.rs  word.rs
