[package]
name = "smol"
version = "0.1.0"
authors = ["David Cao <david@teknik.io>"]
readme = "README.md"
license = "MIT"

[dependencies]
bincode = "0.9"
failure = "0.1"
itertools = "0.7"
rand = "0.4"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
criterion = "0.1"

[[bench]]
name = "benchmark"
harness = false
